--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 beautifulsoup4==4.12.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
+cramjam==2.6.2
+fastparquet==0.8.1
+fsspec==2023.1.0
+fuzzywuzzy==0.18.0
 idna==3.4
+Levenshtein==0.21.1
 numpy==1.21.6
 pandas==1.3.5
 pip-autoremove==0.10.0
 python-dateutil==2.8.2
+python-Levenshtein==0.21.1
 pytz==2023.3
+rapidfuzz==3.1.1
 requests==2.31.0
 six==1.16.0
 soupsieve==2.4.1
